--- a/css/styles.css
+++ b/css/styles.css
@@ -56,13 +56,15 @@ img {
 .container {
   width: 1200px;
   margin: 0 auto;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 32px 0;
-  border-bottom: 1px solid var(--secondary-bgc);
+  border-bottom: 1px solid #ececec;
 }
 
 .site-nav {
@@ -174,10 +176,10 @@ img {
   letter-spacing: 0.06em;
 
   border-radius: 4px;
-  border-color: transparent;
-  padding: 10px 32px;
-  min-width: 160px;
-  min-height: 38px;
+  border: none;
+  padding: 9px 31px;
+  /* min-width: 160px;
+  min-height: 38px; */
   display: inline-block;
 }
 
@@ -187,7 +189,7 @@ img {
 }
 /* Preference section*/
 .preference {
-  padding-top: 92px;
+  padding-top: 94px;
 }
 
 .preference .container {
@@ -209,6 +211,7 @@ img {
 }
 
 .preference-text {
+  width: 270px;
   font-size: 14px;
   line-height: calc(24 / 14);
 }
@@ -220,7 +223,7 @@ img {
 .examples-list {
   display: flex;
   gap: 32px;
-  padding-top: 50px;
+  margin-top: 50px;
 }
 /* Team section */
 .team {
@@ -266,6 +269,14 @@ img {
   background-color: var(--primary-bgc);
 }
 /* Filters section */
+.filters {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  /* margin-bottom: 50px; */
+  padding-top: 94px;
+}
+
 .filters-item {
   color: var(--title-text-color);
   background-color: var(--button-bgc);
@@ -273,14 +284,13 @@ img {
   font-weight: 500;
   font-size: 16px;
   line-height: calc(26 / 16);
-  text-align: center;
-  border-radius: 4px;
   font-family: inherit;
 
   border-radius: 4px;
-  padding: 4px 20px;
-  min-width: 160px;
-  min-height: 40px;
+  padding: 6px 22px;
+  min-height: 38px;
+  border: none;
+  margin-bottom: 50px;
 }
 
 .filters-item:hover,
@@ -299,6 +309,21 @@ img {
 .item-text {
   font-size: 16px;
   line-height: calc(30 / 16);
+}
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.portfolio-list-item {
+  width: 370px;
+}
+.portfolio-list-item:not(:nth-child(3n)) {
+  margin-right: 30px;
+}
+
+.portfolio-list-item:not(:nth-last-child(-n + 3)) {
+  margin-bottom: 30px;
 }
 
 /* Footer */
@@ -320,6 +345,9 @@ img {
 
 .footer-bgc {
   background-color: var(--secondary-bgc);
+  padding-top: 60px;
+  padding-bottom: 60px;
+  display: block;
 }
 
 /* Footer contacts */
@@ -327,6 +355,7 @@ img {
   font-style: normal;
   line-height: calc(24 / 14);
   margin-bottom: 9px;
+  display: inline-block;
 }
 .contacts-footer-address {
   color: var(--secondary-text-color);
