--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,11 @@ body {
   font-size: 14px;
 }
 
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 /* reset start */
 h1,
 h2,
@@ -159,10 +164,7 @@ img {
   padding-top: 200px;
   padding-bottom: 200px;
 }
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
+
 .hero-title {
   color: var(--secondary-text-color);
   font-weight: 900;
@@ -292,6 +294,7 @@ img {
   display: flex;
   justify-content: center;
   gap: 8px;
+  margin-bottom: 50px;
 }
 
 .filters-item {
@@ -307,7 +310,6 @@ img {
   padding: 6px 22px;
   min-height: 38px;
   border: none;
-  margin-bottom: 50px;
 }
 
 .filters-item:hover,
@@ -375,28 +377,29 @@ img {
 }
 
 /* Footer contacts */
-.contacts {
+
+.contacts-footer {
   font-style: normal;
-  line-height: calc(24 / 14);
-  margin-bottom: 9px;
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
 }
+
+.contacts {
+  line-height: calc(24 / 14);
+  display: block;
+  font-size: 14px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.6);
+}
+
 .contacts-footer-address {
   color: var(--secondary-text-color);
 }
 
-.contacts-footer-mail {
-  color: inherit;
-  font-size: 14px;
-}
 .contacts-footer-mail:hover,
 .contacts-footer-mail:focus,
 .contacts-footer-tel:hover,
 .contacts-footer-tel:focus {
   color: var(--accent-color);
-}
-.contacts-footer-tel {
-  color: rgba(255, 255, 255, 0.6);
-  font-size: 14px;
-  margin-bottom: 0;
 }
